css/styles.css
/* ... */
.freelance {
  background-image: url(./../img//freelance.jpg);
}

.cf {
  background-image: url(./../img/cf.jpg);
}

.bio-img:hover {
  transform: scale(1.1);
}

/*-----------------------section two end------------------------*/
.copyright {
  position: relative;
  bottom: 0;
  left: 0;
  font-size: 14px;
  margin: 0;
}

/*-----------------Custom CURSOR-------------------*/
.custom-cursor,
.lazy-cursor {
  position: fixed;
  display: inline-block;
  border-radius: 50%;
  border: 2px solid var(--turquoise-hightight);
  width: 30px;
  height: 30px;
  left: 20px;
  right: 0;
  transition: transform 0.2s ease, opacity 0.2s ease, border-color 0.2s ease,
    background-color 0.2s ease;
  pointer-events: none;
  z-index: 9999;
}

/*hide cursors on touchscreen*/
@media screen and (max-width: 768px) {
  .custom-cursor,
  .lazy-cursor {
    display: none;
  }
}

.lazy-cursor {
  width: 10px;
  height: 10px;
  border: none;
  transition: 0.08s ease-out;
  animation: scale 1.5s infinite ease-in-out;
  mix-blend-mode: difference;
}

.link {
  cursor: none !important;
}

.to-top {
  position: fixed;
  bottom: 40px;
  right: 40px;
  height: 50px;
  width: 50px;
  border-radius: 50%;
  background-color: var(--turquoise-hightight);
  z-index: 99;
  transition: 0.3s;
}

.to-top img {
  height: 50px;
  transform: rotate(-90deg);
  background-color: var(--darkest-purple);
  opacity: 0.5;
}

.to-top:hover {
  transform: scale(1.3);
}

@keyframes scale {
  0% {
    transform: scale(8);
  }
  50% {
    transform: scale(6);
  }
  99.9% {
    transform: scale(8);
  }
}
/*-----------------Custom CURSOR end-------------------*/

/*
----------------cinemApp CASE STUDY-------------------------
*/

#hero {
  position: relative;
}

.cinemapp-hero-img {
  position: relative;
  width: 130%;
  transform: translateX(-12%);
  z-index: -1;
}

#case-study {
  cursor: none;
}

#cinemappCaseStudy {
  cursor: none !important;
  background-color: var(--turquoise-hightight);
}

.cinemapp-content {
  background-color: var(--darkest-purple);
  box-shadow: 0 0 50px var(--darkest-purple);
}

.cinemapp-content h2 {
  margin-top: 100px;
  font-size: 28px;
  font-weight: bold;
  border-bottom: 1px solid var(--turquoise-hightight);
}

.cinemapp-content h4 {
  font-size: 24px;
  color: var(--turquoise-hightight);
}

.cinemapp-content p {
  font-size: 20px;
}

.cinemapp-content a {
  color: var(--turquoise-hightight);
  font-weight: 600;
}

.cinemapp-content span {
  box-shadow: inset 0px -3px 0 0 rgba(55, 187, 180, 0.9),
    inset 0 -6px 0 0px rgba(55, 187, 180, 0.7),
    inset 0 -9px 0 0px rgba(55, 187, 180, 0.5);
}

.info-grid {
  display: flex;
  justify-content: space-around;
  width: 80%;
  margin: auto;
}

.cinemapp-study-img-wrapper {
  box-shadow: 0px 0px 6px 0 rgba(55, 187, 180, 0.5);
}

.cinemapp-study-img {
  width: 100%;
  margin-top: 50px;
}

.ss-wrapper,
.cs-wrapper {
  display: flex;
  align-items: center;
}

.cs-wrapper .img-container {
  height: 400px;
  margin-right: 40px;
}

.img-container {
  max-height: 250px;
  margin: 0 40px;
  box-shadow: 0 0 15px var(--turquoise-hightight);
}

.img-container img {
  height: 100%;
  transition: 0.3s;
}

.img-container img:hover {
  transform: scale(1.75);
}

.approach {
  background-color: rgba(55, 187, 180, 0.1);
  padding-bottom: 60px;
}

.retrospect {
  padding: 0 40px;
}

.retrospect img {
  height: 100px;
  background-color: var(--turquoise-hightight);
  border-radius: 50%;
}

.retrospect img:nth-child(1) {
  border-radius: 0;
  width: 250px;
  height: auto;
}

.retrospect h4 {
  width: 300px;
  font-size: 20px;
  text-align: left;
  border-bottom: 1px solid var(--turquoise-hightight);
}

.react-img-case-study {
  margin-left: 40px;
  animation: spin 5s infinite;
}

@keyframes spin {
  from {
    transform: rotate(0deg);
  }
  to {
    transform: rotate(360deg);
  }
}

.cinemapp-btn-wrapper {
  margin-top: 50px;
}

.cinemapp-btn-wrapper button {
  color: var(--darkest-purple);
  background-color: var(--heading-color);
  font-weight: 600;
  margin: 10px;
}

.case-study-footer {
  width: 130%;
  transform: translateX(-11.5%);
  background-color: rgba(55, 187, 180, 0.2);
}

@media screen and (max-width: 1400px) {
  .ss-wrapper,
  .cs-wrapper {
    display: flex;
    flex-direction: column;
  }
}

@media screen and (max-width: 1200px) {
  .retrospect div {
    display: flex;
    flex-direction: column;
  }

  .img-container img {
    max-width: 98vw;
  }
}

@media screen and (max-width: 500px) {
  .retrospect h4 {
    width: 150px;
  }
}

/*
--------------------Media Queries-------------------
*/
@media all and (min-width: 1023px) and (max-width: 1200px) {
  .placeholder {
    height: 100%;
  }

  .main-about {
    height: 65vh;
  }

  .section-one,
  .profile {
    height: 70vh;
    margin-top: 200px;
  }

  .main__heading {
    margin: 0;
  }

  .toggler-location-row {
    margin-top: 10%;
  }

  .information {
    margin-top: 0;
  }
}

@media all and (min-width: 500px) and (max-width: 750px) {
  .project-list {
    -ms-grid-columns: 1fr;
    grid-template-columns: 1fr;
  }

  .contact-form-wrapper {
    margin-top: 500px;
    width: 80vw;
  }
}

@media all and (min-width: 750px) {
  .social-media-phone {
    display: none;
  }

  body {
    position: relative;
    z-index: 1;
  }

  #menu-toggle {
    display: none;
  }

  .profile__picture-animated {
    margin-top: 5px;
  }

  .project-list {
    grid-gap: 15px;
    padding: 0 35px;
  }

  .contact-form-wrapper {
    height: 700px;
    width: 80vw;
  }
}

@media all and (min-width: 750px) and (max-width: 1023px) {
  .information {
    padding: 20px;
  }

  .placeholder {
    height: 160%;
  }

  .text-info {
    margin-top: 150px;
    width: 90%;
    font-size: 24px;
  }

  .about-me {
    width: auto;
  }
}
/* ... */

